5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1708_3031.log
== TEST (2019-04-29 14:33:12) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
-- ERROR:
File "XXXX", line 6
    elif(90 <= x) and (x < 180) or (x == 270):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:33:18) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
-- ERROR:
File "XXXX", line 6
    elif(90 <= x) and (x < 180) or (x == 270):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:35:08) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:35:15) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:35:20) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- EXECUTION TIME:
0.266718
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
46.66
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:23) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:28) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:32) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:37) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:49) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:58) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:42:04) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:42:15) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:42:23) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:42:30) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:42:35) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:42:41) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:42:46) 
-- CODE:
x=float(input("valor de x:"))
if(x<=1):
	f=round(1, 2)
elif(x>1 and x<=2):
	f=round(2, 2)
elif(x>2 and x<=3):
	f=round((x**2), 2)
else:
	f=round((x**3), 2)
print(f)
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
